# mcp-servers

.github/workflows/: deploy-calcs-api.yml
calcs-api-code/: .env.example  README.md  pyproject.toml
calcs-api-code/calcs_api_code/: __init__.py  client.py  discovery.py  interview.py  types.py
calcs-api-code/calcs_api_code/db/: __init__.py  bigquery.py  connection.py  models.py
calcs-api-code/calcs_api_code/prompts/: test_creation_guide.md
calcs-api-code/calcs_api_code/test_creator/: __init__.py  sample_optimizer.py  test_builder.py  validators.py
calcs-api-code/examples/: claude_code_usage.py  fastapi_gemini_integration.py  gemini_sandbox_safe.py  gemini_usage.py  test_creation_interview.py
calcs-api-code/tests/: test_client.py
calcs-api-mcp/: .dockerignore  .env.example  Dockerfile  README.md  claude-code-config.json  pyproject.toml
calcs-api-mcp/calcs_api/: __init__.py  auth.py  client.py  middleware.py  prompts.py  resources.py  server.py  summarizers.py
calcs-api-mcp/calcs_api/tools/: __init__.py  analysis.py  discovery.py  jobs.py  results.py  tests.py
